# gleap

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  release-please-config.json
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
openapi/: gleap-v3.yaml
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: articles.rs  auth.rs  collections.rs  messages.rs  mod.rs  shared.rs  tickets.rs
src/client/: articles.rs  collections.rs  messages.rs  mod.rs  tickets.rs
src/commands/: auth.rs  mod.rs
src/commands/articles/: create.rs  delete.rs  get.rs  list.rs  mod.rs  move_article.rs  update.rs
src/commands/collections/: create.rs  delete.rs  get.rs  list.rs  update.rs
src/commands/messages/: delete.rs  list.rs  mod.rs  note.rs  reply.rs
src/commands/tickets/: activity_logs.rs  console_logs.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  network_logs.rs  search.rs  update.rs
src/config/: keychain.rs  mod.rs
src/models/: article.rs  collection.rs  message.rs  mod.rs  ticket.rs
