[package]
name = "gleap"
version = "0.2.0"
edition = "2024"
description = "Unofficial CLI tool for interacting with the Gleap customer support API"
license = "MIT"
repository = "https://github.com/tmcinerney/gleap"

[lib]
name = "gleap"
path = "src/lib.rs"

[[bin]]
name = "gleap"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"

# URL construction
url = "2"

# Credential storage (platform backends are cfg-gated by the crate)
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
serial_test = "3"
